Create change type
