# api/todo/model_change_type.go
@@ -1,0 +1,37 @@
+/*
+ * Todo API
+ *
+ * A simple Todo API
+ *
+ * API version: 1.0.0
+ * Contact: darko@krizic.net
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package todo
+// ChangeType : Type of the change
+type ChangeType string
+
+// List of ChangeType
+const (
+	CREATE ChangeType = "CREATE"
+	UPDATE ChangeType = "UPDATE"
+	DELETE ChangeType = "DELETE"
+)
+
+// AssertChangeTypeRequired checks if the required fields are not zero-ed
+func AssertChangeTypeRequired(obj ChangeType) error {
+	return nil
+}
+
+// AssertRecurseChangeTypeRequired recursively checks if required fields are not zero-ed in a nested slice.
+// Accepts only nested slice of ChangeType (e.g. [][]ChangeType), otherwise ErrTypeAssertionError is thrown.
+func AssertRecurseChangeTypeRequired(objSlice interface{}) error {
+	return AssertRecurseInterfaceRequired(objSlice, func(obj interface{}) error {
+		aChangeType, ok := obj.(ChangeType)
+		if !ok {
+			return ErrTypeAssertionError
+		}
+		return AssertChangeTypeRequired(aChangeType)
+	})
+}
