# server/backend/memory/memory.go
@@ -2,16 +2,15 @@ package memory
 
 import (
 	"context"
-	"github.com/dkrizic/todo/api/todo"
+	repository "github.com/dkrizic/todo/server/backend/repository"
 	log "github.com/sirupsen/logrus"
 	"go.opentelemetry.io/otel"
 	"golang.org/x/exp/maps"
 )
 
-var todoMap = map[string]*todo.ToDo{}
+var todoMap = map[string]*repository.Todo{}
 
 type server struct {
-	todo.UnimplementedToDoServiceServer
 	maxEntries int
 }
 
@@ -21,34 +20,32 @@ func NewServer(maxEntries int) *server {
 		maxEntries: maxEntries,
 	}
 	// ensure server implements the inteface
-	var _ todo.ToDoServiceServer = myServer
+	var _ repository.TodoRepository = myServer
 	return myServer
 }
 
-func (s *server) Create(ctx context.Context, req *todo.CreateOrUpdateRequest) (resp *todo.CreateOrUpdateResponse, err error) {
+func (s *server) Create(ctx context.Context, req *repository.CreateOrUpdateRequest) (resp *repository.CreateOrUpdateResponse, err error) {
 	ctx, span := otel.Tracer("memory").Start(ctx, "Create")
 	defer span.End()
 	log.WithField("id", req.Todo.Id).WithField("title", req.Todo.Title).Info("Creating new todo")
 	// add to map
 	todoMap[req.Todo.Id] = req.Todo
-	return &todo.CreateOrUpdateResponse{
-		Api:  "v1",
+	return &repository.CreateOrUpdateResponse{
 		Todo: req.Todo,
 	}, nil
 }
 
-func (s *server) Update(ctx context.Context, req *todo.CreateOrUpdateRequest) (resp *todo.CreateOrUpdateResponse, err error) {
+func (s *server) Update(ctx context.Context, req *repository.CreateOrUpdateRequest) (resp *repository.CreateOrUpdateResponse, err error) {
 	ctx, span := otel.Tracer("memory").Start(ctx, "Update")
 	defer span.End()
 	log.WithField("id", req.Todo.Id).WithField("title", req.Todo.Title).Info("Updating todo")
 	todoMap[req.Todo.Id] = req.Todo
-	return &todo.CreateOrUpdateResponse{
-		Api:  "v1",
+	return &repository.CreateOrUpdateResponse{
 		Todo: req.Todo,
 	}, nil
 }
 
-func (s *server) GetAll(ctx context.Context, req *todo.GetAllRequest) (resp *todo.GetAllResponse, err error) {
+func (s *server) GetAll(ctx context.Context, req *repository.GetAllRequest) (resp *repository.GetAllResponse, err error) {
 	ctx, span := otel.Tracer("memory").Start(ctx, "GetAll")
 	defer span.End()
 	log.WithField("count", len(todoMap)).Info("Getting all todos")
@@ -56,29 +53,26 @@ func (s *server) GetAll(ctx context.Context, req *todo.GetAllRequest) (resp *tod
 	_, span2 := otel.Tracer("memory").Start(ctx, "GetAll/mapValues")
 	todos := maps.Values(todoMap)
 	defer span2.End()
-	return &todo.GetAllResponse{
-		Api:   "v1",
+	return &repository.GetAllResponse{
 		Todos: todos,
 	}, nil
 }
 
-func (s *server) Get(ctx context.Context, req *todo.GetRequest) (resp *todo.GetResponse, err error) {
+func (s *server) Get(ctx context.Context, req *repository.GetRequest) (resp *repository.GetResponse, err error) {
 	ctx, span := otel.Tracer("memory").Start(ctx, "Get")
 	defer span.End()
 	log.WithField("id", req.Id).Info("Getting todo")
-	return &todo.GetResponse{
-		Api:  "v1",
+	return &repository.GetResponse{
 		Todo: todoMap[req.Id],
 	}, nil
 }
 
-func (s *server) Delete(ctx context.Context, req *todo.DeleteRequest) (resp *todo.DeleteResponse, err error) {
+func (s *server) Delete(ctx context.Context, req *repository.DeleteRequest) (resp *repository.DeleteResponse, err error) {
 	ctx, span := otel.Tracer("memory").Start(ctx, "Delete")
 	defer span.End()
 	log.WithField("id", req.Id).Info("Deleting todo")
 	delete(todoMap, req.Id)
-	return &todo.DeleteResponse{
-		Api: "v1",
-		Id:  req.Id,
+	return &repository.DeleteResponse{
+		Id: req.Id,
 	}, nil
 }
